fix welcome page on mobile

--- a/css/_sternenlabor_overrides.scss
+++ b/css/_sternenlabor_overrides.scss
@@ -148,6 +148,6 @@
 
 @media only screen and (max-width: 500px) {
     .welcome .header {
-        height: 420px;
+        height: 440px;
     }
 }
